--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Think Slate Application</string>
+    <!-- LoginActivity -->
+    <string name="email_prompt">Email</string>
+    <string name="password_prompt">Password</string>
+    <string name="login_btn">Login</string>
 </resources>
