--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="email_prompt">Email</string>
     <string name="password_prompt">Password</string>
     <string name="login_btn">Login</string>
+    <string name="title_activity_google_maps_test">Map</string>
 </resources>
